--- a/.github/workflows/job-notifications.yml
+++ b/.github/workflows/job-notifications.yml
@@ -26,8 +26,8 @@ jobs:
         run: docker build -t yuvadius/job-notifications:latest -f .github/actions/job-notifications/Dockerfile .
 
       - name: Run container
-        run: docker run -e KUBECONFIG=/kubeconfig -v ~/.kube/config:/kubeconfig -e AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }} \
-          -e AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }} \
+        run: docker run -e KUBECONFIG=/kubeconfig -v ~/.kube/config:/kubeconfig -e AWS_ACCESS_KEY_ID="${{ secrets.AWS_ACCESS_KEY_ID }}" \
+          -e AWS_SECRET_ACCESS_KEY="${{ secrets.AWS_SECRET_ACCESS_KEY }}" \
           yuvadius/job-notifications:latest
 
       # - name: Run job-notifications action
