--- a/.github/actions/job-notifications/envs/default.env
+++ b/.github/actions/job-notifications/envs/default.env
@@ -6,3 +6,4 @@ ELASTICSEARCH_PASSWORD=/k8s-secrets/elastic/elasticsearch-auth/elasticsearch-pas
 WHATSAPP_ACCESS_TOKEN=/k8s-secrets/secrets/whatsapp-api-auth/whatsapp-api-access-token
 JOBY_WHATSAPP_PHONE_ID=/k8s-secrets/secrets/whatsapp-api-auth/joby-whatsapp-api-phone-id
 LINKEDIN_API_KEY=/k8s-secrets/secrets/rapid-linkedin-auth/linkedin-api-key
+OPENAI_TOKEN=/k8s-secrets/secrets/openai-auth/openai-token
