--- a/.github/workflows/job-notifications.yml
+++ b/.github/workflows/job-notifications.yml
@@ -6,6 +6,8 @@ permissions:
 
 on:
   workflow_dispatch:
+  schedule:
+    - cron: '0 8 * * *' # 10:00 AM Asia/Jerusalem is 8:00 AM UTC
 
 jobs:
   notify:
