Added DB to env

--- a/services/whatsapp/envs/default.env
+++ b/services/whatsapp/envs/default.env
@@ -11,3 +11,9 @@ CREATOMATE_API_KEY=/k8s-secrets/secrets/creatomate-auth/creatomate-api-key
 CREATOMATE_API_KEY_TRIAL=/k8s-secrets/secrets/creatomate-auth/creatomate-api-key-trial
 OPENAI_TOKEN=/k8s-secrets/secrets/openai-auth/openai-token
 LINKEDIN_API_KEY=/k8s-secrets/secrets/rapid-linkedin-auth/linkedin-api-key
+
+POSTGRES_USERNAME=postgres
+POSTGRES_PASSWORD=/k8s-secrets/postgresql/postgresql-auth/postgresql-password
+POSTGRES_HOST=postgresql.postrix.io
+POSTGRES_PORT=5432
+DATABASE=joby
