--- a/.github/actions/job-notifications/package.json
+++ b/.github/actions/job-notifications/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "env-loader": "file:../../../packages/env-loader",
+    "joby-db": "file:../../../packages/joby-db",
     "logger": "file:../../../packages/logger",
     "openai": "^5.8.2",
     "secret-manager": "file:../../../packages/secret-manager",
