--- a/services/whatsapp/envs/default.env
+++ b/services/whatsapp/envs/default.env
@@ -16,4 +16,4 @@ POSTGRES_USERNAME=postgres
 POSTGRES_PASSWORD=/k8s-secrets/postgresql/postgresql-auth/postgresql-password
 POSTGRES_HOST=postgresql.postrix.io
 POSTGRES_PORT=5432
-DATABASE=joby
+DATABASE=lumo
