--- a/.github/workflows/build-and-deploy-main.yml
+++ b/.github/workflows/build-and-deploy-main.yml
@@ -19,7 +19,7 @@ jobs:
     strategy:
       matrix:
         environment: [dev, prod]
-        db: [joby, cannon]
+        db: [joby, lumo, cannon]
 
     uses: ./.github/workflows/db-migrate.yml
     with:
