Switched to vercel ai sdk

--- a/services/whatsapp/envs/default.env
+++ b/services/whatsapp/envs/default.env
@@ -9,7 +9,15 @@ CAPISH_WHATSAPP_PHONE_ID=/k8s-secrets/secrets/whatsapp-api-auth/capish-whatsapp-
 JOBY_WHATSAPP_PHONE_ID=/k8s-secrets/secrets/whatsapp-api-auth/joby-whatsapp-api-phone-id
 CREATOMATE_API_KEY=/k8s-secrets/secrets/creatomate-auth/creatomate-api-key
 CREATOMATE_API_KEY_TRIAL=/k8s-secrets/secrets/creatomate-auth/creatomate-api-key-trial
+
+# AI Provider Tokens
 OPENAI_TOKEN=/k8s-secrets/secrets/openai-auth/openai-token
+ANTHROPIC_API_KEY=/k8s-secrets/secrets/anthropic-auth/anthropic-api-key
+GOOGLE_API_KEY=/k8s-secrets/secrets/google-auth/google-api-key
+
+# AI Configuration - using current available Google model
+AI_MODEL=anthropic:claude-4-opus
+
 LINKEDIN_API_KEY=/k8s-secrets/secrets/rapid-linkedin-auth/linkedin-api-key
 
 POSTGRES_USERNAME=postgres
