--- a/services/whatsapp/package.json
+++ b/services/whatsapp/package.json
@@ -10,7 +10,11 @@
     "test": "jest --config ../../jest.config.mjs --rootDir ./"
   },
   "dependencies": {
+    "@ai-sdk/anthropic": "^1.2.12",
+    "@ai-sdk/google": "^1.2.22",
+    "@ai-sdk/openai": "^1.3.23",
     "@aws-sdk/client-s3": "^3.772.0",
+    "ai": "^4.3.19",
     "creatomate": "file:../../packages/creatomate",
     "env-loader": "file:../../packages/env-loader",
     "express": "^4.18.2",
@@ -21,7 +25,8 @@
     "openai": "^5.8.2",
     "redis": "file:../../packages/redis",
     "secret-manager": "file:../../packages/secret-manager",
-    "whatsapp-utils": "file:../../packages/whatsapp-utils"
+    "whatsapp-utils": "file:../../packages/whatsapp-utils",
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "@types/express": "^5.0.1",
