--- a/services/whatsapp/envs/default.env
+++ b/services/whatsapp/envs/default.env
@@ -16,7 +16,7 @@ ANTHROPIC_API_KEY=/k8s-secrets/secrets/anthropic-auth/anthropic-api-key
 GOOGLE_API_KEY=/k8s-secrets/secrets/google-auth/google-api-key
 
 # AI Configuration - using current available Google model
-AI_MODEL=anthropic:claude-4-opus
+AI_MODEL=anthropic:claude-4-sonnet
 
 LINKEDIN_API_KEY=/k8s-secrets/secrets/rapid-linkedin-auth/linkedin-api-key
 
