Add lumo whatsapp phone id

--- a/services/whatsapp/envs/default.env
+++ b/services/whatsapp/envs/default.env
@@ -7,6 +7,7 @@ REDIS_PASSWORD=/k8s-secrets/redis/redis-auth/redis-password
 WHATSAPP_ACCESS_TOKEN=/k8s-secrets/secrets/whatsapp-api-auth/whatsapp-api-access-token
 CAPISH_WHATSAPP_PHONE_ID=/k8s-secrets/secrets/whatsapp-api-auth/capish-whatsapp-api-phone-id
 JOBY_WHATSAPP_PHONE_ID=/k8s-secrets/secrets/whatsapp-api-auth/joby-whatsapp-api-phone-id
+LUMO_WHATSAPP_PHONE_ID=/k8s-secrets/secrets/whatsapp-api-auth/lumo-whatsapp-api-phone-id
 CREATOMATE_API_KEY=/k8s-secrets/secrets/creatomate-auth/creatomate-api-key
 CREATOMATE_API_KEY_TRIAL=/k8s-secrets/secrets/creatomate-auth/creatomate-api-key-trial
 
