Add backoffice to the ci/cd

--- a/.github/workflows/build-and-deploy-main.yml
+++ b/.github/workflows/build-and-deploy-main.yml
@@ -34,7 +34,7 @@ jobs:
 
     strategy:
       matrix:
-        service: [whatsapp, cannon]
+        service: [whatsapp, cannon, backoffice]
     
     uses: ./.github/workflows/build-and-push.yml
     with:
