--- a/.github/workflows/build-and-deploy-adhoc.yml
+++ b/.github/workflows/build-and-deploy-adhoc.yml
@@ -26,7 +26,7 @@ jobs:
 
     strategy:
       matrix:
-        service: [whatsapp, cannon]
+        service: [whatsapp, cannon, backoffice]
 
     uses: ./.github/workflows/build-and-push.yml
     with:
