--- a/services/backoffice/Dockerfile
+++ b/services/backoffice/Dockerfile
@@ -1,4 +1,4 @@
-# Build: docker build -t yuvadius/backoffice:latest -f backoffice/Dockerfile .
+# Build: docker build -t yuvadius/backoffice:latest -f services/backoffice/Dockerfile .
 # docker push yuvadius/backoffice:latest
 # docker run -p 3000:3000 -e ENV=local yuvadius/backoffice:latest
 
@@ -12,14 +12,17 @@ WORKDIR /usr/workspace
 # Copy the root package.json and package-lock.json
 COPY package.json package-lock.json ./
 
+# Copy the service
+COPY services/backoffice services/backoffice/
+
+# Copy all packages
+COPY packages packages/
+
 # Install dependencies that are only used by the service or its dependencies
 RUN npm ci --workspace=backoffice
 
-# Copy the service
-COPY . .
-
 # Build the service
-RUN npm run build
+RUN npm --prefix=services/backoffice run build
 
 # From:https://hub.docker. using lightest node
 FROM --platform=linux/arm64 node:24.0.1-slim
@@ -30,12 +33,18 @@ WORKDIR /usr/workspace
 # Copy the root package.json and package-lock.json
 COPY package.json package-lock.json ./
 
+# Copy the service
+COPY services/backoffice services/backoffice/
+
+# Copy all packages
+COPY packages packages/
+
 # Install dependencies that are only used by the service or its dependencies for production
 RUN npm ci --workspace=backoffice --omit=dev
 
 # Copy the built and static assets
-COPY --from=build /usr/workspace/.next ./.next
-COPY --from=build /usr/workspace/public ./public
+COPY --from=build /usr/workspace/services/backoffice/.next services/backoffice/.next
+COPY --from=build /usr/workspace/services/backoffice/public services/backoffice/public
 
 # Expose the port the service runs on
 EXPOSE 3000
@@ -44,4 +53,4 @@ EXPOSE 3000
 USER node
 
 # Start the application
-CMD ["npm","start"]
+CMD ["npm","--prefix=services/backoffice","run","start"]
