--- a/services/backoffice/package.json
+++ b/services/backoffice/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "env-loader": "file:../../packages/env-loader",
     "logger": "file:../../packages/logger",
     "next": "16.0.0",
     "react": "19.2.0",
