--- a/packages/file-system/package.json
+++ b/packages/file-system/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.802.0",
     "@aws-sdk/credential-providers": "^3.799.0",
-    "logger": "file:../logger"
+    "logger": "file:../logger",
+    "utils": "*"
   }
 }
