--- a/packages/secret-manager/package.json
+++ b/packages/secret-manager/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@aws-sdk/client-secrets-manager": "^3.799.0",
     "@aws-sdk/credential-providers": "^3.799.0",
-    "@kubernetes/client-node": "^1.3.0"
+    "@kubernetes/client-node": "^1.3.0",
+    "utils": "*"
   }
 }
