--- a/kubernetes/fluent-bit/values/defaults.yaml
+++ b/kubernetes/fluent-bit/values/defaults.yaml
@@ -56,6 +56,14 @@ config:
         Keep_Log Off
         K8S-Logging.Parser On
         K8S-Logging.Exclude Off
+    
+    [FILTER]
+        Name parser
+        Match kube.*
+        Key_Name log
+        Parser json
+        Reserve_Data On
+        Preserve_Key On
 
   outputs: |
     [OUTPUT]
