--- a/services/cannon/Dockerfile
+++ b/services/cannon/Dockerfile
@@ -10,11 +10,14 @@ FROM --platform=linux/arm64 node:24.0.1-slim
 # Install OpenSSL (required by Prisma)
 RUN apt-get update -y && apt-get install -y openssl
 
+# Install pnpm globally
+RUN npm install -g pnpm@9.5.0
+
 # Set up the workspace directory and cd into it
 WORKDIR /usr/workspace
 
-# Copy the root package.json and package-lock.json
-COPY package.json package-lock.json ./
+# Copy pnpm workspace configuration and lockfile
+COPY package.json pnpm-workspace.yaml pnpm-lock.yaml ./
 
 # Copy the service
 COPY services/cannon services/cannon/
@@ -23,7 +26,7 @@ COPY services/cannon services/cannon/
 COPY packages packages/
 
 # Install dependencies that are only used by the service or its dependencies
-RUN npm ci --workspace=cannon --omit=dev
+RUN pnpm install --prod --frozen-lockfile --filter=cannon...
 
 # Start the application
-CMD ["npm", "--prefix=services/cannon", "run", "start"]
+CMD ["pnpm", "--filter=cannon", "run", "start"]
