--- a/.github/actions/repo-warm-up/action.yml
+++ b/.github/actions/repo-warm-up/action.yml
@@ -34,15 +34,20 @@ runs:
         fi
       shell: bash
 
+    - name: Install pnpm
+      uses: pnpm/action-setup@v4
+      with:
+        version: 9.5.0
+
     - name: Use Node.js
       uses: actions/setup-node@v4
       with:
         node-version: '24.0.1'
-        cache: 'npm'
+        cache: 'pnpm'
     
     - name: Install dependencies
       run: |
-        npm ci
+        pnpm install --frozen-lockfile
       shell: bash
 
     - name: Build TypeScript Actions
@@ -50,7 +55,7 @@ runs:
         for dir in .github/actions/*/; do
           if [ -f "$dir/package.json" ] && jq -e '.scripts.build' "$dir/package.json" > /dev/null; then
             echo "Building $dir"
-            npm run build --workspace="$dir"
+            pnpm --filter="$(basename $dir)" run build
           else
             echo "No build script in $dir, skipping."
           fi
