--- a/.github/workflows/db-migrate.yml
+++ b/.github/workflows/db-migrate.yml
@@ -34,4 +34,4 @@ jobs:
 
       - name: DB Migrate
         working-directory: packages/${{ inputs.db }}-db
-        run: DATABASE_URL='${{ secrets.DATABASE_INSTANCE_URL }}/${{ inputs.db }}?schema=${{ steps.repo_warm_up.outputs.namespace }}' npm run migrate:deploy
+        run: DATABASE_URL='${{ secrets.DATABASE_INSTANCE_URL }}/${{ inputs.db }}?schema=${{ steps.repo_warm_up.outputs.namespace }}' pnpm run migrate:deploy
