--- a/.github/workflows/type-check.yml
+++ b/.github/workflows/type-check.yml
@@ -18,4 +18,4 @@ jobs:
         uses: ./.github/actions/repo-warm-up
       
       - name: Run Type Check
-        run: npm run type-check
+        run: pnpm run type-check
