--- a/kubernetes/postgresql/templates/secret.yaml
+++ b/kubernetes/postgresql/templates/secret.yaml
@@ -13,3 +13,6 @@ spec:
       creationTimestamp: null
       name: postgresql-auth
       namespace: postgresql
+      annotations:
+        reflector.v1.k8s.emberstack.com/reflection-allowed: "true"
+        reflector.v1.k8s.emberstack.com/reflection-allowed-namespaces: "n8n"
