--- a/kubernetes/helmfile.yaml
+++ b/kubernetes/helmfile.yaml
@@ -11,6 +11,8 @@ repositories:
     url: https://fluent.github.io/helm-charts
   - name: emberstack
     url: https://emberstack.github.io/helm-charts
+  - name: prometheus-community
+    url: https://prometheus-community.github.io/helm-charts
 
 ---
 
@@ -124,6 +126,14 @@ releases:
       app: n8n
     values:
       - ./n8n/values/defaults.yaml
+
+  - name: monitoring
+    namespace: monitoring
+    chart: ./monitoring
+    labels:
+      app: monitoring
+    values:
+      - ./monitoring/values/defaults.yaml
 
   - name: whatsapp
     namespace: "{{ default .Namespace .Environment.Name }}"
