--- a/services/backoffice/envs/default.env
+++ b/services/backoffice/envs/default.env
@@ -4,3 +4,7 @@ CLUSTER_NAME=postrix
 ELASTICSEARCH_USERNAME=elastic
 ELASTICSEARCH_PASSWORD=/k8s-secrets/elastic/elasticsearch-auth/elasticsearch-password
 REDIS_PASSWORD=/k8s-secrets/redis/redis-auth/redis-password
+
+GOOGLE_CLIENT_ID=/k8s-secrets/secrets/google-auth/google-client-id
+GOOGLE_CLIENT_SECRET=/k8s-secrets/secrets/google-auth/google-client-secret
+NEXTAUTH_SECRET=/k8s-secrets/secrets/next-auth/next-auth-secret
