--- a/services/backoffice/package.json
+++ b/services/backoffice/package.json
@@ -11,10 +11,11 @@
     "env-loader": "file:../../packages/env-loader",
     "logger": "file:../../packages/logger",
     "next": "16.0.0",
+    "next-auth": "^4.24.8",
     "react": "19.2.0",
     "react-dom": "19.2.0",
-    "next-auth": "^4.24.8",
-    "secret-manager": "file:../../packages/secret-manager"
+    "secret-manager": "file:../../packages/secret-manager",
+    "utils": "^1.0.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
