Add it to default

--- a/services/backoffice/envs/default.env
+++ b/services/backoffice/envs/default.env
@@ -8,3 +8,4 @@ REDIS_PASSWORD=/k8s-secrets/redis/redis-auth/redis-password
 GOOGLE_CLIENT_ID=/k8s-secrets/secrets/google-auth/google-client-id
 GOOGLE_CLIENT_SECRET=/k8s-secrets/secrets/google-auth/google-client-secret
 NEXTAUTH_SECRET=/k8s-secrets/secrets/next-auth/next-auth-secret
+NEXTAUTH_URL=https://backoffice.postrix.io
