--- a/services/backoffice/envs/dev.env
+++ b/services/backoffice/envs/dev.env
@@ -1,2 +1,2 @@
 REDIS_URL=redis://redis-master.redis.svc.cluster.local:6379
-NEXTAUTH_URL=https://backoffice.postrix.io
+NEXTAUTH_URL=https://dev-backoffice.postrix.io
