Added verification code auth

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -28,6 +28,7 @@
     "backoffice",
     "bitnami",
     "Capish",
+    "cloudresourcemanager",
     "Creatomate",
     "daemonset",
     "datname",
