--- a/services/backoffice/envs/default.env
+++ b/services/backoffice/envs/default.env
@@ -2,9 +2,16 @@ PORT=3000
 CLUSTER_NAME=postrix
 
 ELASTICSEARCH_USERNAME=elastic
-ELASTICSEARCH_PASSWORD=/k8s-secrets/elastic/elasticsearch-auth/elasticsearch-password
-REDIS_PASSWORD=/k8s-secrets/redis/redis-auth/redis-password
+SECRET_ELASTICSEARCH_PASSWORD=/k8s-secrets/elastic/elasticsearch-auth/elasticsearch-password
+SECRET_REDIS_PASSWORD=/k8s-secrets/redis/redis-auth/redis-password
 
-GOOGLE_CLIENT_ID=/k8s-secrets/secrets/google-auth/google-client-id
-GOOGLE_CLIENT_SECRET=/k8s-secrets/secrets/google-auth/google-client-secret
-NEXTAUTH_SECRET=/k8s-secrets/secrets/next-auth/next-auth-secret
+SECRET_GOOGLE_CLIENT_ID=/k8s-secrets/secrets/google-auth/google-client-id
+SECRET_GOOGLE_CLIENT_SECRET=/k8s-secrets/secrets/google-auth/google-client-secret
+SECRET_NEXTAUTH_SECRET=/k8s-secrets/secrets/next-auth/next-auth-secret
+
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_SECURE=false
+SECRET_SMTP_USER=/k8s-secrets/secrets/smtp-auth/smtp-user
+SECRET_SMTP_PASSWORD=/k8s-secrets/secrets/smtp-auth/smtp-password # Generated via App Password: https://myaccount.google.com/apppasswords
+SMTP_FROM=Backoffice <no-reply@postrix.io>
