--- a/services/backoffice/package.json
+++ b/services/backoffice/package.json
@@ -12,14 +12,17 @@
     "logger": "file:../../packages/logger",
     "next": "16.0.0",
     "next-auth": "^4.24.8",
+    "nodemailer": "^6.9.8",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "redis": "file:../../packages/redis",
     "secret-manager": "file:../../packages/secret-manager",
     "utils": "^1.0.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.14",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "tailwindcss": "^4",
