--- a/scripts/polymarket/envs/default.env
+++ b/scripts/polymarket/envs/default.env
@@ -1,2 +1,6 @@
+ELASTICSEARCH_USERNAME=elastic
+SECRET_ELASTICSEARCH_PASSWORD=/k8s-secrets/elastic/elasticsearch-auth/elasticsearch-password
+SECRET_REDIS_PASSWORD=/k8s-secrets/redis/redis-auth/redis-password
+
 SECRET_POLYMARKET_API_KEY=/k8s-secrets/secrets/polymarket-auth/polymarket-api-key
 SECRET_POLYMARKET_ADDRESS=/k8s-secrets/secrets/polymarket-auth/polymarket-address
