--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -28,12 +28,14 @@
     "backoffice",
     "bitnami",
     "Capish",
+    "Clob",
     "cloudresourcemanager",
     "Creatomate",
     "daemonset",
     "datname",
     "dualstack",
     "emberstack",
+    "ethersproject",
     "Googlebot",
     "helmfile",
     "joby",
