--- a/packages/polymarket/package.json
+++ b/packages/polymarket/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@polymarket/clob-client": "^4.22.8",
     "ethers": "^6.15.0",
+    "logger": "^1.0.0",
     "secret-manager": "^1.0.0"
   }
 }
