--- a/scripts/polymarket/package.json
+++ b/scripts/polymarket/package.json
@@ -13,6 +13,8 @@
     "@polymarket/clob-client": "^4.22.8",
     "env-loader": "^1.0.0",
     "ethers": "^6.15.0",
+    "logger": "^1.0.0",
+    "polymarket": "^1.0.0",
     "secret-manager": "^1.0.0"
   }
 }
